# mnf

./: Cargo.toml  LICENSE  README.ko.md  README.md
src/: checker.rs  cli.rs  generator.rs  lib.rs  main.rs  model.rs  output.rs  search.rs  validation.rs
src/tui/: mod.rs
